--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google-cloud/text-to-speech": "^3.4.0",
     "axios": "^0.26.0",
     "express": "^4.17.3",
     "fca-unofficial": "^1.3.10",
