--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@xaviabot/fca-unofficial": "^1.4.0",
+    "fca-unofficial": "github:fca-unofficial/fca-unofficial",
     "fs": "^0.0.1-security",
     "mirai-fca-unofficial": "github:bhhoang/mirai-fca-unofficial"
   }
